# NexPlay

./: .gitignore  Cargo.toml  README.md  config.example.toml  config.toml  package-lock.json  package.json  repomix-output.txt  repomix-output.xml
.github/workflows/: release.yml
data/: slint-bangumi.sqlite3
electron/: asset-protocol.cjs  backend-ipc.cjs  backend-rpc-client.cjs  main.cjs  player-control.cjs  preload.cjs  render-bridge.cjs
frontend/src/: App.tsx  DanmakuOverlay.tsx  MediaCard.tsx  MpvWebglSurface.tsx  NavRail.tsx  backend.ts  danmaku.worker.ts  data.ts  discover.ts  index.css  motion.ts  subjectHydration.ts  ui.tsx  vite-env.d.ts
frontend/src/hooks/: useIncrementalItems.ts  usePosterPalette.ts
frontend/src/pages/: Detail.tsx  Discover.tsx  Home.tsx  Library.tsx  Player.tsx  Profile.tsx  Resources.tsx  Settings.tsx
frontend/src/utils/: assets.ts
native/mpv-render-bridge/: binding.gyp  package.json  renderer-daemon.cjs
native/mpv-render-bridge/src/: addon.cc
scripts/: check-backend-daemon.cjs  diagnose-danmaku.cjs  diagnose-player.cjs  prepare-release-assets.cjs
src/: app.rs  backend_api.rs  backend_daemon.rs  config.rs  domain.rs  error.rs  main.rs  player_daemon.rs  repository.rs  service.rs  task.rs
src/metadata/: bangumi.rs  matcher.rs  provider.rs
src/repository/: schema.rs
src/service/: bangumi.rs  catalog.rs  danmaku.rs  watch_history.rs
src/ui/: bridge.rs
ui/: main.slint
