[package]
name = "nexplay"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
md5 = "0.7"
quick-xml = "0.38"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
ts-rs = "12"
walkdir = "2"
